Name:                haskell-craft
Version:             0.0.0.1
Synopsis:            Minecraft Pi API Interface Library

Description:         haskell-craft is a Haskell binding to Minecraft PI API
License:             BSD3
License-file:        LICENSE
Author:              Mark Grebe
Maintainer:          mark.grebe@ku.edu
Copyright:           Copyright (c) 2015 The University of Kansas
Homepage:            https://github.com/markgrebe/haskell-craft/wiki
Bug-reports:         https://github.com/markgrebe/haskell-craft/issues
Category:            Graphics
Build-type:          Simple
Stability:           beta
Extra-source-files:  README.md
Cabal-version:       >= 1.10
Library
  Exposed-modules:     HaskellCraft,
                       HaskellCraft.Craft,
                       HaskellCraft.Block,
                       HaskellCraft.Utils
  other-modules:       HaskellCraft.Parser
  default-language:    Haskell2010
  build-depends:       base               >= 4.6     && < 4.9,
                       network            >= 2.0,
                       stm                >= 2.2     && < 2.5,
                       text               >= 1.1     && < 1.3,
                       text-show          >= 0.5     && < 0.6,
                       transformers       >= 0.3     && < 0.5,
                       parsec             >= 3.0
  GHC-options:         -Wall
  GHC-prof-options:    -Wall -auto-all -fsimpl-tick-factor=100000

source-repository head
  type:     git
  location: git://github.com/markgrebe/haskell-craft.git
